--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Add empty web page</title>
 	</head>	
 	<body>
-		<h1>Blank page</h1>
+		<h1>Blank page yes</h1>
 		<div>Almost blank!</div>
 	</body>
 </html>
