Changed index.html title

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
-		<title>Add empty web page</title>
+		<title>New page</title>
 	</head>	
 	<body>
-		<h1>Blank page</h1>
-		<div>Almost blank!</div>
+		<h1>Blank page yes</h1>
+		<div>Almost blank! New word</div>
 	</body>
 </html>
