--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
-		<title>New page</title>
+		<title>New page title</title>
 	</head>	
 	<body>
 		<h1>Blank page yes</h1>
