--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>New page title</title>
 	</head>	
 	<body>
-		<h1>Blank page yes</h1>
+		<h1>Blank page yes yes</h1>
 		<div>Almost blank! New word</div>
 	</body>
 </html>
