--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang = "en">
 	<head>
 		<title>My page of codes</title>
+		<link href="styles.css" rel="stylesheet" type="text/css">
 	</head>	
 	<body>
 		<h1>Blank page yes</h1>
