Added second new li

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			<li>
 				Wow-wow, looking cool, Joker
 			</li>
+			<li>
+				Wow-wow, looking cool, Joker
+			</li>
 		</ul>
 	</body>
 </html>
